syntax = "proto3";

enum MsgType {
  UNKNOWN_TYPE = 0;
  LRC_TIME = 1001;
}

message LrcTime {
  MsgType type = 1;
  bool forward = 2;
  int64 ts = 3;
  int32 songId = 4;
}